--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -45,6 +45,8 @@
         <!--マイページ-->
         <activity android:name=".StudentMypage" android:theme="@style/AppTheme" android:label="@string/app_name"> <!--テーマを指定-->></activity>
         <!--先生向け-->
+        <!--先生ログイン-->
+        <activity android:name=".LoginTeacher" android:theme="@style/AppTheme" android:label="@string/app_name"><!--テーマを指定--></activity>
         <!--学科情報-->
         <activity android:name=".TeacherDepartment" android:theme="@style/AppTheme" android:label="@string/app_name"> <!--テーマを指定-->></activity>
         <!--学年情報-->
