--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -51,6 +51,8 @@
         <activity android:name=".TeacherGrade" android:theme="@style/AppTheme" android:label="@string/app_name"> <!--テーマを指定-->></activity>
         <!--学生情報-->
         <activity android:name=".TeacherStudent" android:theme="@style/AppTheme" android:label="@string/app_name"> <!--テーマを指定-->></activity>
+        <!--マイページ-->
+        <activity android:name=".MypageActivity" android:theme="@style/AppTheme" android:label="@string/app_name"> <!--テーマを指定-->></activity>
 
 
     </application>
