--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -44,6 +44,8 @@
         <activity android:name=".StudentTimeline" android:theme="@style/AppTheme" android:label="@string/app_name"> <!--テーマを指定-->></activity>
         <!--マイページ-->
         <activity android:name=".StudentMypage" android:theme="@style/AppTheme" android:label="@string/app_name"> <!--テーマを指定-->></activity>
+        <!--マイページ編集-->
+        <activity android:name=".StudentMypageEdit" android:theme="@style/AppTheme" android:label="@string/app_name"> <!--テーマを指定-->></activity>
         <!--先生向け-->
         <!--先生ログイン-->
         <activity android:name=".LoginTeacher" android:theme="@style/AppTheme" android:label="@string/app_name"><!--テーマを指定--></activity>
