--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,7 +26,8 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        android:name=".UtilCommon">
         <!--一番最初に出す画面-->
         <activity android:name=".LoginStudent" android:theme="@style/SplashTheme"> <!--android:theme="@style/SplashTheme"
                                                                                             に書き換えるとロード画面が自動でスプラッシュが標示される-->
