--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -45,6 +45,8 @@
         <activity android:name=".StudentTimeline" android:theme="@style/AppTheme" android:label="@string/app_name" android:screenOrientation="portrait"> <!--テーマを指定-->></activity>
         <!--マイページ-->
         <activity android:name=".StudentMypage" android:theme="@style/AppTheme" android:label="@string/app_name" android:screenOrientation="portrait"> <!--テーマを指定-->></activity>
+        <!--マイページの編集-->
+        <activity android:name=".StudentMypageEdit" android:theme="@style/AppTheme" android:label="@string/app_name" android:screenOrientation="portrait"> <!--テーマを指定-->></activity>
         <!--他生徒のページ-->
         <activity android:name=".OtherPage" android:theme="@style/AppTheme" android:label="@string/app_name" android:screenOrientation="portrait"> <!--テーマを指定-->></activity>
         <!--先生向け-->
