--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -58,6 +58,9 @@
         <activity android:name=".TeacherGrade" android:theme="@style/AppTheme" android:label="@string/app_name" android:screenOrientation="portrait"> <!--テーマを指定-->></activity>
         <!--学生情報-->
         <activity android:name=".TeacherStudent" android:theme="@style/AppTheme" android:label="@string/app_name" android:screenOrientation="portrait"> <!--テーマを指定-->></activity>
+        <!--退会-->
+        <activity android:name=".Unsubscribe" android:theme="@style/SplashTheme" android:label="@string/app_name" android:screenOrientation="portrait"></activity>
+
 
     </application>
 
